examples/modules/invalid/cycle/a.axom
import invalid.cycle.b

pub fn id_a(x: Int) -> Int => x
